# penta-blog-service

./: alembic.ini  main.py  package-lock.json  pyproject.toml
Frontend/react-fastapi-integration/: index.html  package-lock.json  package.json
Frontend/react-fastapi-integration/src/: App.css  App.jsx  TailwindApp.css
Frontend/react-fastapi-integration/src/components/: ProtectedRoute.jsx  apiClient_axios.jsx  authUtils.jsx
Frontend/react-fastapi-integration/src/pages/: Category.jsx  Dashboard.jsx  Login.jsx  Posts.jsx  Register.jsx  Role.jsx
Frontend/react-fastapi-integration/src/styles/: Category.css  Dashboard.css  Post.css  Role.css  Role_Register.css
alembic/: env.py
alembic/versions/: 0d19e83a698b_password_not_null.py  0e753924fc71_datetime_change_to_timezone.py  2635a35912b1_datetime_changed_another_time.py  44721db73673_fix_nullable_constraint_for_password_.py  5c15db1bed77_datetime_change_to_timezone.py  7fba6db9da7c_update_timestamps_with_server_default_.py  88bcd534486b_new_null_changes.py  8a0b523e5af5_forcing_null_set.py  a719800a33f2_initial_migration.py  ccf4218e3730_initial_migration.py
api/: category.py  logins.py  post.py  roles.py  tokens.py  users.py
api/utils/: categories.py  jwt_util.py  posts.py  roles.py  users.py
db/: db_setup.py
db/models/: category_model.py  mixins.py  post_model.py  role_model.py  user_model.py
infrastructure/security/: Route_intercept.py  auth_permission_validator.py
pydantic_schema/: category_schema.py  post_schema.py  role_schema.py  user_schema.py
