[tool.poetry]
name = "penta-blog-service"
version = "0.1.0"
description = ""
authors = ["Asif Arman <Armanasif457@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
