[tool.poetry]
name = "penta-blog-service"
version = "0.1.0"
description = ""
authors = ["Asif Arman <Armanasif457@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
psycopg2-binary = "^2.9.10"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
